rewrite url pages htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,15 @@
 RewriteEngine On
 
+# Redirige les URLs avec /pages/ vers une version sans /pages/
+RewriteCond %{THE_REQUEST} \s/pages/([a-zA-Z0-9_-]+)\s [NC]
+RewriteRule ^pages/([a-zA-Z0-9_-]+)$ /$1 [R=301,L]
+
+# Sert les fichiers dans /pages/ quand /contact est appelé
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{DOCUMENT_ROOT}/pages/$1.php -f
+RewriteRule ^([a-zA-Z0-9_-]+)$ pages/$1.php [L]
+
 # Ne pas réécrire si fichier ou dossier réel
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
@@ -9,7 +19,7 @@ RewriteRule ^ - [L]
 RewriteCond %{REQUEST_FILENAME}.php -f
 RewriteRule ^([^/]+)/?$ $1.php [L]
 RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^(.+?)/([^/]+)$ $1/$2.php [L]
+RewriteRule ^(.+)/([^/]+)/?$ $1/$2.php [L]
 
 # Supprime l'affichage du .php dans l'URL
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s(.+)\.php\sHTTP
