--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,10 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{DOCUMENT_ROOT}/pages/$1.php -f
 RewriteRule ^([a-zA-Z0-9_-]+)$ pages/$1.php [L]
 
+# --- Réécrire les URLs propres vers /incoming/nom.php (sans extension) ---
+RewriteCond %{DOCUMENT_ROOT}/incoming/$1.php -f
+RewriteRule ^([a-zA-Z0-9_-]+)$ incoming/$1.php [L]
+
 # --- Supprimer .php de l'URL propre ---
 RewriteCond %{THE_REQUEST} \s/([^\s]+)\.php[?\s] [NC]
 RewriteRule ^(.+)\.php$ /$1 [R=301,L]
