--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,39 +1,49 @@
 RewriteEngine On
 
-# --- Rediriger directement les URLs contenant /pages/ vers la version propre ---
-RewriteCond %{THE_REQUEST} \s/pages/([a-zA-Z0-9_-]+)(?:\.php)?\s [NC]
+### --- PAGES propres ---
+# Rediriger /pages/xxx(.php) -> /xxx
+RewriteCond %{THE_REQUEST} \s/pages/([a-zA-Z0-9_-]+)(?:\.php)?[\s?] [NC]
 RewriteRule ^pages/([a-zA-Z0-9_-]+)(?:\.php)?$ /$1 [R=301,L]
 
-# --- Réécrire les URLs propres vers /incoming/nom.php (sans extension) ---
-RewriteCond %{DOCUMENT_ROOT}/incoming/$1.php -f
-RewriteRule ^([a-zA-Z0-9_-]+)$ incoming/$1.php [L]
-
-# --- Réécrire les URLs propres vers /pages/nom.php (sans extension) ---
+# Réécrire /xxx -> /pages/xxx.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{DOCUMENT_ROOT}/pages/$1.php -f
-RewriteRule ^([a-zA-Z0-9_-]+)$ pages/$1.php [L]
+RewriteRule ^([a-zA-Z0-9_-]+)/?$ pages/$1.php [L]
 
-# --- Supprimer .php de l'URL propre ---
+### --- incoming propres ---
+# 1) Rediriger /incoming/xxx.php -> /incoming/xxx
+RewriteCond %{THE_REQUEST} \s/incoming/([a-zA-Z0-9_-]+)\.php[\s?] [NC]
+RewriteRule ^incoming/([a-zA-Z0-9_-]+)\.php$ /incoming/$1 [R=301,L]
+
+# 2) Réécrire /incoming/xxx
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{DOCUMENT_ROOT}/incoming/$1.php -f
+RewriteRule ^incoming/([a-zA-Z0-9_-]+)/?$ incoming/$1.php [L]
+
+### --- Retirer .php globalement, mais PAS dans /incoming/ ---
 RewriteCond %{THE_REQUEST} \s/([^\s]+)\.php[?\s] [NC]
+RewriteCond %{REQUEST_URI} !^/incoming/ [NC]
 RewriteRule ^(.+)\.php$ /$1 [R=301,L]
 
-# --- Désactiver l'indexation des dossiers ---
+### --- Sécurité & divers ---
+# Désactiver l'indexation des dossiers
 Options -Indexes
 
-# --- Bloquer l'accès aux fichiers sensibles ---
+# Bloquer l'accès aux fichiers sensibles
 <FilesMatch "\.(ini|log|sh|bak|inc|sql|config\.php|\.env|\.git|\.ht|composer\.json|composer\.lock)$">
     Order allow,deny
     Deny from all
 </FilesMatch>
 
-# --- Bloquer les fichiers cachés (commençant par .) ---
+# Bloquer les fichiers cachés 
 <Files ~ "^\.">
     Order allow,deny
     Deny from all
 </Files>
 
-# --- Headers de sécurité ---
+# Headers de sécurité
 <IfModule mod_headers.c>
     Header set X-Content-Type-Options "nosniff"
     Header set X-Frame-Options "SAMEORIGIN"
@@ -41,7 +51,7 @@ Options -Indexes
     Header set Referrer-Policy "strict-origin-when-cross-origin"
 </IfModule>
 
-# --- Limiter les méthodes HTTP ---
+# Limiter les méthodes HTTP
 <LimitExcept GET POST>
     Deny from all
 </LimitExcept>
